# RoofAIStudio

./: .gitignore  CHANGELOG.md  README.md  init_db.py  main.py  pyproject.toml  requirements.txt
app/ai/: __init__.py  ai_engine.py  ai_model.py  ai_result.py  ai_test_runner.py  analysis_pipeline.py  dataset_manager.py  geometry_converter.py  mask_processor.py  model_registry.py  pipeline.py  post_processing.py  prediction_pipeline.py  roof_segmentation.py  segmentation_model.py  segmentation_result.py
app/controllers/: __init__.py  ai_controller.py  geometry_controller.py  image_controller.py
app/core/: __init__.py  app_info.py  app_paths.py  config.py  constants.py  logger.py
app/database/: __init__.py  base.py  database.py  enums.py  session.py
app/exporters/: __init__.py  pdf_exporter.py  pdf_models.py  report_template.py
app/geometry/: __init__.py  calibration.py  edge.py  measurement.py  plane.py  point.py  polygon.py  roof_area.py  roof_genome.py  roof_geometry.py  transform.py
app/materials/: __init__.py  calculation_result.py  material_calculator.py  material_model.py  material_repository.py  material_service.py  roof_system_model.py
app/pricing/: __init__.py  estimate_builder.py  price_model.py  pricing_service.py
app/services/: __init__.py  measurement_service.py  roof_genome_service.py  roof_measurement_service.py
app/ui/: __init__.py  main_window.py  menu_bar.py  roof_canvas.py  (+4 more)
scripts/: smoke_test_roof_plane_detector.py
tests/: conftest.py  test_calibration.py  test_geometry.py  test_materials.py  test_pipeline.py  test_pricing.py
(+48 files in other folders)
