[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "RoofAIStudio"
version = "0.1.0"
description = "AI-powered roof analysis and estimation tool"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
